# svg2psd

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  svg2psd.mjs  svg2psd.py  tsconfig.json
.github/workflows/: test.yml
rust/: Cargo.toml
rust-psd/: Cargo.toml
rust-psd/src/: descriptor.rs  encoder.rs  lib.rs  rle.rs  types.rs  writer.rs
rust-psd/tests/: integration.rs
rust/src/: lib.rs  types.rs
rust/src/core/: convert_all.rs  converter_core.rs  mod.rs  parser_core.rs  psd_bridge.rs  renderer_core.rs  renderer_resvg.rs
rust/src/psd/: builder.rs  effects.rs  mod.rs  text_layer.rs
rust/src/svg/: mod.rs  parser.rs  style_resolver.rs  text_extractor.rs  transforms.rs  walker.rs
rust/src/utils/: color.rs  font.rs  mod.rs
src/: converter.mjs  converter.ts  index.mjs  index.ts  types.ts
src/core/: converter-core.mjs  converter-core.ts  parser-core.mjs  parser-core.ts  renderer-core.mjs  renderer-core.ts
src/psd/: builder.mjs  builder.ts  effects.mjs  effects.ts  text-layer.mjs  text-layer.ts
src/render/: batch-renderer.mjs  batch-renderer.ts  renderer.mjs  renderer.ts
src/svg/: parser.mjs  parser.ts  style-resolver.mjs  style-resolver.ts  text-extractor.mjs  text-extractor.ts  transforms.mjs  transforms.ts  walker.mjs  walker.ts
src/utils/: color.mjs  color.ts  font.mjs  font.ts  validation.mjs  validation.ts
test-wasm/core/: converter-core.test.ts  parser-core.test.ts  renderer-core.test.ts  (+1 more)
web/: app.mjs  app.ts  engine-rust.ts  index.html  tsconfig.json  vite.config.mjs  vite.config.ts
(+48 files in other folders)
